-   Refined fact module. Now has update, updateterm, forget and shorthand syntax for lookup
-   Added lock and unlock
-   Added a version command
-   Added TicketId command to the trac plugin
-   Added triggers
-   Dont require a trigger in a query
-   General purpose permission system
-   Better help system, now with optional example, syntax and doc
-   Module and config source reloading
-   Added initial Fact plugin
-   Added initial Admin and Info plugins