@@ -1,3 +1,5 @@
+-   fact shorthand lookup now takes an index also
+-   Only match first string after trigger.
 -   Refined fact module. Now has update, updateterm, forget and shorthand syntax for lookup
 -   Added lock and unlock
 -   Added a version command
